Fix jumping page on opening logboek

--- a/app/frontend/assets/styles/_base.scss
+++ b/app/frontend/assets/styles/_base.scss
@@ -22,6 +22,7 @@ body {
     -moz-osx-font-smoothing: grayscale;
     font-smoothing: antialiased;
     width: 100%;
+    box-sizing: border-box;
 }
 
 html {
